2022 MiniJ HW1/minij_parse.output
State 19 conflicts: 3 shift/reduce
State 45 conflicts: 3 shift/reduce
State 87 conflicts: 9 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 121 conflicts: 9 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: mainc cdcls
    2     | ε

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    4 cdcls: cdcl cdcls
    5      | ε

    6 cdcl: CLASS ID LBP vdcls mdcls RBP

    7 vdcls: vdcl vdcls
    8      | ε

    9 vdcl: type ID SEMI

   10 mdcls: mdcl mdcls
   11      | ε

   12 mdcl: PUB type ID LP formals RP LBP vdcls stmts RETURN exp SEMI RBP

   13 formals: type ID frest
   14        | ε

   15 frest: COMMA type ID frest
   16      | ε

   17 type: INT LSP RSP
   18     | BOOLEAN
   19     | INT
   20     | ID

   21 stmt: LBP stmts RBP
   22     | IF LP exp RP stmt ELSE stmt
   23     | WHILE LP exp RP stmt
   24     | PRINT LP exp RP SEMI
   25     | ID ASSIGN exp SEMI
   26     | ID LSP exp RSP ASSIGN exp SEMI
   27     | vdcl
   28     | LP exp RP

   29 stmts: stmt stmts
   30      | ε

   31 exp: exp ADD exp
   32    | exp MINUS exp
   33    | exp TIMES exp
   34    | exp AND exp
   35    | exp OR exp
   36    | exp LT exp
   37    | exp LE exp
   38    | exp EQ exp
   39    | ID LSP exp RSP
   40    | ID LP explist RP
   41    | ID exp RP
   42    | exp DOT exp
   43    | LIT
   44    | TRUE
   45    | FALSE
   46    | ID
   47    | THIS
   48    | NEW INT LSP exp RSP
   49    | NEW ID LP RP
   50    | NOT exp
   51    | exp TIMES stmt

   52 explist: exp exprests
   53        | ε

   54 exprests: exprest exprests
   55         | ε

   56 exprest: COMMA exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLASS (258) 3 6
    PUB (259) 3 12
    STATIC (260) 3
    AND (261) 34
    OR (262) 35
    LT (263) 36
    LE (264) 37
    EQ (265) 38
    ADD (266) 31
    MINUS (267) 32
    TIMES (268) 33 51
    LBP (269) 3 6 12 21
    RBP (270) 3 6 12 21
    LSP (271) 3 17 26 39 48
    RSP (272) 3 17 26 39 48
    LP (273) 3 12 22 23 24 28 40 49
    RP (274) 3 12 22 23 24 28 40 41 49
    INT (275) 17 19 48
    BOOLEAN (276) 18
    IF (277) 22
    ELSE (278) 22
    WHILE (279) 23
    PRINT (280) 24
    ASSIGN (281) 25 26
    VOID (282) 3
    MAIN (283) 3
    STR (284) 3
    RETURN (285) 12
    SEMI (286) 9 12 24 25 26
    COMMA (287) 15 56
    THIS (288) 47
    NEW (289) 48 49
    DOT (290) 42
    ID (291) 3 6 9 12 13 15 20 25 26 39 40 41 46 49
    LIT (292) 43
    TRUE (293) 44
    FALSE (294) 45
    NOT (295) 50


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    prog (42)
        on left: 1 2
        on right: 0
    mainc (43)
        on left: 3
        on right: 1
    cdcls (44)
        on left: 4 5
        on right: 1 4
    cdcl (45)
        on left: 6
        on right: 4
    vdcls (46)
        on left: 7 8
        on right: 6 7 12
    vdcl (47)
        on left: 9
        on right: 7 27
    mdcls (48)
        on left: 10 11
        on right: 6 10
    mdcl (49)
        on left: 12
        on right: 10
    formals (50)
        on left: 13 14
        on right: 12
    frest (51)
        on left: 15 16
        on right: 13 15
    type (52)
        on left: 17 18 19 20
        on right: 9 12 13 15
    stmt (53)
        on left: 21 22 23 24 25 26 27 28
        on right: 22 23 29 51
    stmts (54)
        on left: 29 30
        on right: 3 12 21 29
    exp (55)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 12 22 23 24 25 26 28 31 32 33 34 35 36 37 38 39 41 42 48 50 51 52 56
    explist (56)
        on left: 52 53
        on right: 40
    exprests (57)
        on left: 54 55
        on right: 52 54
    exprest (58)
        on left: 56
        on right: 54


State 0

    0 $accept: • prog $end
    1 prog: • mainc cdcls
    2     | ε •  [$end]
    3 mainc: • CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (prog)

    prog   go to state 2
    mainc  go to state 3


State 1

    3 mainc: CLASS • ID LBP PUB STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    ID  shift, and go to state 4


State 2

    0 $accept: prog • $end

    $end  shift, and go to state 5


State 3

    1 prog: mainc • cdcls
    4 cdcls: • cdcl cdcls
    5      | ε •  [$end]
    6 cdcl: • CLASS ID LBP vdcls mdcls RBP

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (cdcls)

    cdcls  go to state 7
    cdcl   go to state 8


State 4

    3 mainc: CLASS ID • LBP PUB STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    LBP  shift, and go to state 9


State 5

    0 $accept: prog $end •

    $default  accept


State 6

    6 cdcl: CLASS • ID LBP vdcls mdcls RBP

    ID  shift, and go to state 10


State 7

    1 prog: mainc cdcls •

    $default  reduce using rule 1 (prog)


State 8

    4 cdcls: • cdcl cdcls
    4      | cdcl • cdcls
    5      | ε •  [$end]
    6 cdcl: • CLASS ID LBP vdcls mdcls RBP

    CLASS  shift, and go to state 6

    $default  reduce using rule 5 (cdcls)

    cdcls  go to state 11
    cdcl   go to state 8


State 9

    3 mainc: CLASS ID LBP • PUB STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    PUB  shift, and go to state 12


State 10

    6 cdcl: CLASS ID • LBP vdcls mdcls RBP

    LBP  shift, and go to state 13


State 11

    4 cdcls: cdcl cdcls •

    $default  reduce using rule 4 (cdcls)


State 12

    3 mainc: CLASS ID LBP PUB • STATIC VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    STATIC  shift, and go to state 14


State 13

    6 cdcl: CLASS ID LBP • vdcls mdcls RBP
    7 vdcls: • vdcl vdcls
    8      | ε •  [PUB, RBP]
    9 vdcl: • type ID SEMI
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    $default  reduce using rule 8 (vdcls)

    vdcls  go to state 18
    vdcl   go to state 19
    type   go to state 20


State 14

    3 mainc: CLASS ID LBP PUB STATIC • VOID MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    VOID  shift, and go to state 21


State 15

   17 type: INT • LSP RSP
   19     | INT •  [ID]

    LSP  shift, and go to state 22

    $default  reduce using rule 19 (type)


State 16

   18 type: BOOLEAN •

    $default  reduce using rule 18 (type)


State 17

   20 type: ID •

    $default  reduce using rule 20 (type)


State 18

    6 cdcl: CLASS ID LBP vdcls • mdcls RBP
   10 mdcls: • mdcl mdcls
   11      | ε •  [RBP]
   12 mdcl: • PUB type ID LP formals RP LBP vdcls stmts RETURN exp SEMI RBP

    PUB  shift, and go to state 23

    $default  reduce using rule 11 (mdcls)

    mdcls  go to state 24
    mdcl   go to state 25


State 19

    7 vdcls: • vdcl vdcls
    7      | vdcl • vdcls
    8      | ε •  [PUB, LBP, RBP, LP, INT, BOOLEAN, IF, WHILE, PRINT, RETURN, ID]
    9 vdcl: • type ID SEMI
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    INT       [reduce using rule 8 (vdcls)]
    BOOLEAN   [reduce using rule 8 (vdcls)]
    ID        [reduce using rule 8 (vdcls)]
    $default  reduce using rule 8 (vdcls)

    vdcls  go to state 26
    vdcl   go to state 19
    type   go to state 20

    shift/reduce conflict on token INT:
        8 vdcls: ε •
       17 type: • INT LSP RSP
      Example: PUB type ID LP formals RP LBP vdcl • INT LSP RSP ID SEMI vdcl stmts RETURN exp SEMI RBP
      Shift derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls                                                            stmts RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls
                                                      ↳ 7: vdcl                             vdcls
                                                           ↳ 9: type                ID SEMI ↳ 7: vdcl vdcls
                                                                ↳ 17: • INT LSP RSP                   ↳ 7: ε
      Reduce derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls              stmts                                                             RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls    ↳ 29: stmt                                 stmts
                                                      ↳ 8: ε •       ↳ 27: vdcl                           ↳ 29: stmt       stmts
                                                                           ↳ 9: type              ID SEMI       ↳ 27: vdcl
                                                                                ↳ 17: INT LSP RSP

    shift/reduce conflict on token BOOLEAN:
        8 vdcls: ε •
       18 type: • BOOLEAN
      Example: PUB type ID LP formals RP LBP vdcl • BOOLEAN ID SEMI vdcl stmts RETURN exp SEMI RBP
      Shift derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls                                                        stmts RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls
                                                      ↳ 7: vdcl                         vdcls
                                                           ↳ 9: type            ID SEMI ↳ 7: vdcl vdcls
                                                                ↳ 18: • BOOLEAN                   ↳ 7: ε
      Reduce derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls              stmts                                                         RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls    ↳ 29: stmt                             stmts
                                                      ↳ 8: ε •       ↳ 27: vdcl                       ↳ 29: stmt       stmts
                                                                           ↳ 9: type          ID SEMI       ↳ 27: vdcl
                                                                                ↳ 18: BOOLEAN

    shift/reduce conflict on token INT:
        8 vdcls: ε •
       19 type: • INT
      Example: PUB type ID LP formals RP LBP vdcl • INT ID SEMI vdcl stmts RETURN exp SEMI RBP
      Shift derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls                                                    stmts RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls
                                                      ↳ 7: vdcl                     vdcls
                                                           ↳ 9: type        ID SEMI ↳ 7: vdcl vdcls
                                                                ↳ 19: • INT                   ↳ 7: ε
      Reduce derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls              stmts                                                     RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls    ↳ 29: stmt                         stmts
                                                      ↳ 8: ε •       ↳ 27: vdcl                   ↳ 29: stmt       stmts
                                                                           ↳ 9: type      ID SEMI       ↳ 27: vdcl
                                                                                ↳ 19: INT

    shift/reduce conflict on token ID:
        8 vdcls: ε •
       20 type: • ID
      Example: PUB type ID LP formals RP LBP vdcl • ID ID SEMI vdcl stmts RETURN exp SEMI RBP
      Shift derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls                                                   stmts RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls
                                                      ↳ 7: vdcl                    vdcls
                                                           ↳ 9: type       ID SEMI ↳ 7: vdcl vdcls
                                                                ↳ 20: • ID                   ↳ 7: ε
      Reduce derivation
        mdcl
        ↳ 12: PUB type ID LP formals RP LBP vdcls              stmts                                                    RETURN exp SEMI RBP
                                            ↳ 7: vdcl vdcls    ↳ 29: stmt                        stmts
                                                      ↳ 8: ε •       ↳ 27: vdcl                  ↳ 29: stmt       stmts
                                                                           ↳ 9: type     ID SEMI       ↳ 27: vdcl
                                                                                ↳ 20: ID



State 20

    9 vdcl: type • ID SEMI

    ID  shift, and go to state 27


State 21

    3 mainc: CLASS ID LBP PUB STATIC VOID • MAIN LP STR LSP RSP ID RP LBP stmts RBP RBP

    MAIN  shift, and go to state 28


State 22

   17 type: INT LSP • RSP

    RSP  shift, and go to state 29


State 23

   12 mdcl: PUB • type ID LP formals RP LBP vdcls stmts RETURN exp SEMI RBP
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    type  go to state 30


State 24

    6 cdcl: CLASS ID LBP vdcls mdcls • RBP

    RBP  shift, and go to state 31


State 25

   10 mdcls: • mdcl mdcls
   10      | mdcl • mdcls
   11      | ε •  [RBP]
   12 mdcl: • PUB type ID LP formals RP LBP vdcls stmts RETURN exp SEMI RBP

    PUB  shift, and go to state 23

    $default  reduce using rule 11 (mdcls)

    mdcls  go to state 32
    mdcl   go to state 25


State 26

    7 vdcls: vdcl vdcls •

    $default  reduce using rule 7 (vdcls)


State 27

    9 vdcl: type ID • SEMI

    SEMI  shift, and go to state 33


State 28

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN • LP STR LSP RSP ID RP LBP stmts RBP RBP

    LP  shift, and go to state 34


State 29

   17 type: INT LSP RSP •

    $default  reduce using rule 17 (type)


State 30

   12 mdcl: PUB type • ID LP formals RP LBP vdcls stmts RETURN exp SEMI RBP

    ID  shift, and go to state 35


State 31

    6 cdcl: CLASS ID LBP vdcls mdcls RBP •

    $default  reduce using rule 6 (cdcl)


State 32

   10 mdcls: mdcl mdcls •

    $default  reduce using rule 10 (mdcls)


State 33

    9 vdcl: type ID SEMI •

    $default  reduce using rule 9 (vdcl)


State 34

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP • STR LSP RSP ID RP LBP stmts RBP RBP

    STR  shift, and go to state 36


State 35

   12 mdcl: PUB type ID • LP formals RP LBP vdcls stmts RETURN exp SEMI RBP

    LP  shift, and go to state 37


State 36

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR • LSP RSP ID RP LBP stmts RBP RBP

    LSP  shift, and go to state 38


State 37

   12 mdcl: PUB type ID LP • formals RP LBP vdcls stmts RETURN exp SEMI RBP
   13 formals: • type ID frest
   14        | ε •  [RP]
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    $default  reduce using rule 14 (formals)

    formals  go to state 39
    type     go to state 40


State 38

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP • RSP ID RP LBP stmts RBP RBP

    RSP  shift, and go to state 41


State 39

   12 mdcl: PUB type ID LP formals • RP LBP vdcls stmts RETURN exp SEMI RBP

    RP  shift, and go to state 42


State 40

   13 formals: type • ID frest

    ID  shift, and go to state 43


State 41

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP RSP • ID RP LBP stmts RBP RBP

    ID  shift, and go to state 44


State 42

   12 mdcl: PUB type ID LP formals RP • LBP vdcls stmts RETURN exp SEMI RBP

    LBP  shift, and go to state 45


State 43

   13 formals: type ID • frest
   15 frest: • COMMA type ID frest
   16      | ε •  [RP]

    COMMA  shift, and go to state 46

    $default  reduce using rule 16 (frest)

    frest  go to state 47


State 44

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP RSP ID • RP LBP stmts RBP RBP

    RP  shift, and go to state 48


State 45

    7 vdcls: • vdcl vdcls
    8      | ε •  [LBP, LP, INT, BOOLEAN, IF, WHILE, PRINT, RETURN, ID]
    9 vdcl: • type ID SEMI
   12 mdcl: PUB type ID LP formals RP LBP • vdcls stmts RETURN exp SEMI RBP
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    INT       [reduce using rule 8 (vdcls)]
    BOOLEAN   [reduce using rule 8 (vdcls)]
    ID        [reduce using rule 8 (vdcls)]
    $default  reduce using rule 8 (vdcls)

    vdcls  go to state 49
    vdcl   go to state 19
    type   go to state 20

    shift/reduce conflict on token INT:
        8 vdcls: ε •
       17 type: • INT LSP RSP
      First example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • INT LSP RSP ID SEMI vdcls stmts RETURN exp SEMI RBP RBP cdcls $end
      Shift derivation
        $accept
        ↳ 0: prog                                                                                                                                                        $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                                  cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcl                                                                                                      RBP
                                                     ↳ 12: PUB type ID LP formals RP LBP vdcls                                       stmts RETURN exp SEMI RBP
                                                                                         ↳ 7: vdcl                             vdcls
                                                                                              ↳ 9: type                ID SEMI
                                                                                                   ↳ 17: • INT LSP RSP
      Second example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • INT LSP RSP ID SEMI stmts RETURN exp SEMI RBP mdcls RBP cdcls $end
      Reduce derivation
        $accept
        ↳ 0: prog                                                                                                                                                                            $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                                                      cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcls                                                                                                                         RBP
                                                     ↳ 10: mdcl                                                                                                              mdcls
                                                           ↳ 12: PUB type ID LP formals RP LBP vdcls    stmts                                            RETURN exp SEMI RBP
                                                                                               ↳ 8: ε • ↳ 29: stmt                                 stmts
                                                                                                              ↳ 27: vdcl
                                                                                                                    ↳ 9: type              ID SEMI
                                                                                                                         ↳ 17: INT LSP RSP

    shift/reduce conflict on token BOOLEAN:
        8 vdcls: ε •
       18 type: • BOOLEAN
      First example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • BOOLEAN ID SEMI vdcls stmts RETURN exp SEMI RBP RBP cdcls $end
      Shift derivation
        $accept
        ↳ 0: prog                                                                                                                                                    $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                              cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcl                                                                                                  RBP
                                                     ↳ 12: PUB type ID LP formals RP LBP vdcls                                   stmts RETURN exp SEMI RBP
                                                                                         ↳ 7: vdcl                         vdcls
                                                                                              ↳ 9: type            ID SEMI
                                                                                                   ↳ 18: • BOOLEAN
      Second example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • BOOLEAN ID SEMI stmts RETURN exp SEMI RBP mdcls RBP cdcls $end
      Reduce derivation
        $accept
        ↳ 0: prog                                                                                                                                                                        $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                                                  cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcls                                                                                                                     RBP
                                                     ↳ 10: mdcl                                                                                                          mdcls
                                                           ↳ 12: PUB type ID LP formals RP LBP vdcls    stmts                                        RETURN exp SEMI RBP
                                                                                               ↳ 8: ε • ↳ 29: stmt                             stmts
                                                                                                              ↳ 27: vdcl
                                                                                                                    ↳ 9: type          ID SEMI
                                                                                                                         ↳ 18: BOOLEAN

    shift/reduce conflict on token INT:
        8 vdcls: ε •
       19 type: • INT
      First example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • INT ID SEMI vdcls stmts RETURN exp SEMI RBP RBP cdcls $end
      Shift derivation
        $accept
        ↳ 0: prog                                                                                                                                                $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                          cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcl                                                                                              RBP
                                                     ↳ 12: PUB type ID LP formals RP LBP vdcls                               stmts RETURN exp SEMI RBP
                                                                                         ↳ 7: vdcl                     vdcls
                                                                                              ↳ 9: type        ID SEMI
                                                                                                   ↳ 19: • INT
      Second example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • INT LSP RSP ID SEMI stmts RETURN exp SEMI RBP mdcls RBP cdcls $end
      Reduce derivation
        $accept
        ↳ 0: prog                                                                                                                                                                            $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                                                      cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcls                                                                                                                         RBP
                                                     ↳ 10: mdcl                                                                                                              mdcls
                                                           ↳ 12: PUB type ID LP formals RP LBP vdcls    stmts                                            RETURN exp SEMI RBP
                                                                                               ↳ 8: ε • ↳ 29: stmt                                 stmts
                                                                                                              ↳ 27: vdcl
                                                                                                                    ↳ 9: type              ID SEMI
                                                                                                                         ↳ 17: INT LSP RSP

    shift/reduce conflict on token ID:
        8 vdcls: ε •
       20 type: • ID
      First example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • ID ID SEMI vdcls stmts RETURN exp SEMI RBP RBP cdcls $end
      Shift derivation
        $accept
        ↳ 0: prog                                                                                                                                               $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                         cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcl                                                                                             RBP
                                                     ↳ 12: PUB type ID LP formals RP LBP vdcls                              stmts RETURN exp SEMI RBP
                                                                                         ↳ 7: vdcl                    vdcls
                                                                                              ↳ 9: type       ID SEMI
                                                                                                   ↳ 20: • ID
      Second example: mainc CLASS ID LBP vdcls PUB type ID LP formals RP LBP • ID ASSIGN exp SEMI stmts RETURN exp SEMI RBP mdcls RBP cdcls $end
      Reduce derivation
        $accept
        ↳ 0: prog                                                                                                                                                                $end
             ↳ 1: mainc cdcls
                        ↳ 4: cdcl                                                                                                                                          cdcls
                             ↳ 6: CLASS ID LBP vdcls mdcls                                                                                                             RBP
                                                     ↳ 10: mdcl                                                                                                  mdcls
                                                           ↳ 12: PUB type ID LP formals RP LBP vdcls    stmts                                RETURN exp SEMI RBP
                                                                                               ↳ 8: ε • ↳ 29: stmt                     stmts
                                                                                                              ↳ 25: ID ASSIGN exp SEMI



State 46

   15 frest: COMMA • type ID frest
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID

    INT      shift, and go to state 15
    BOOLEAN  shift, and go to state 16
    ID       shift, and go to state 17

    type  go to state 50


State 47

   13 formals: type ID frest •

    $default  reduce using rule 13 (formals)


State 48

    3 mainc: CLASS ID LBP PUB STATIC VOID MAIN LP STR LSP RSP ID RP • LBP stmts RBP RBP

    LBP  shift, and go to state 51


State 49

    9 vdcl: • type ID SEMI
   12 mdcl: PUB type ID LP formals RP LBP vdcls • stmts RETURN exp SEMI RBP
   17 type: • INT LSP RSP
   18     | • BOOLEAN
   19     | • INT
   20     | • ID
   21 stmt: • LBP stmts RBP
   22     | • IF LP exp RP stmt ELSE stmt
   23     | • WHILE LP exp RP stmt
   24     | • PRINT LP exp RP SEMI
   25     | • ID ASSIGN exp SEMI
   26     | • ID LSP exp RSP ASSIGN exp SEMI
   27     | • vdcl
   28     | • LP exp RP
   29 stmts: • stmt stmts
   30      | ε •  [RETURN]
